# phrasendrescher

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac
man/: pd.1  phrasendrescher.1
src/: Makefile.am  Makefile.in  dictionary.c  dictionary.h  incremental.c  incremental.h  phrasendrescher.c  phrasendrescher.h  plugin.c  plugin.h  rewriter.c  rewriter.h  rules.c  rules.h  source.c  source.h  utils.c  utils.h  worker.c  worker.h
src/plugins/: Makefile.am  Makefile.in  README  enc-file.c  http-raw.c  mssql.c  pkey.c  rsa-dsa.c  ssh.c
